# isolate-sandbox

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  compose.yaml  example-env.sh
.cursor/commands/: commit.md
.cursor/rules/: use-orbctl.mdc
.github/workflows/: ci.yaml
client-sdks/javascript/: README.md  jsr.json  package.json
client-sdks/javascript/examples/: basic-usage.ts  box-management.ts  error-handling.ts
client-sdks/javascript/src/: client.ts  errors.ts  index.ts  types.ts
config/python/: compiler  requirements.txt  runner  setup.sh
src/: config.rs  main.rs
src/adapters/api/: error.rs  handlers.rs  middleware.rs  mod.rs  models.rs  routes.rs
src/domain/: error.rs  mod.rs
src/domain/entities/: execution.rs  language.rs  mod.rs
src/domain/repositories/: language.rs  mod.rs
src/domain/services/: compiler.rs  mod.rs  sandbox.rs
src/use_cases/: cleanup_box.rs  execute_code.rs  get_box_file.rs  health_check.rs  list_box_files.rs  list_languages.rs  mod.rs
